--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@supabase/supabase-js": "^2.54.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "prism": "^4.1.2",
     "qrcode": "^1.5.4"
