--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "qr-code-app",
   "version": "1.0.0",
-  "description": "This api will validate and generate QR codes",
+  "description": "This api will validate and generate qr codes",
   "keywords": [
-    "QR",
+    "qr",
     "generate",
     "scan"
   ],
@@ -20,7 +20,7 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.54.0",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cuid": "^3.0.0",
@@ -28,11 +28,15 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
+    "jsqr": "^1.4.0",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.5",
     "qrcode": "^1.5.4",
+    "qrcode-reader": "^1.0.4",
+    "sharp": "^0.34.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
