--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prisma": "^6.13.0"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
   }
 }
