changed the role of a user

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "prisma:seed": "node prisma/seed-admin.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.13.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@prisma/client": "^6.16.1",
     "@supabase/supabase-js": "^2.54.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "cuid": "^3.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "prisma": "^6.13.0"
+    "prisma": "^6.16.1"
   },
   "engines": {
     "node": "20.x",
